<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="main_text">My First Application</string>
    <string name="student_info">Student: Sotnikov\nGroup: 3.2ИСИП-1</string>
    <string name="avatar_description">Avatar</string>
    <string name="menu_description">Menu</string>
    <string name="like_description">Like</string>
    <string name="share_description">Share</string>
    <string name="views_description">Views</string>
    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>
    <string name="post_hint">What news?</string>
    <string name="save_post">Post</string>
    <string name="cancel_edit_hint">Edit</string>
    <string name="cancel_edit">Cancel</string>
    <string name="add_post">Add post</string>
    <string name="edit_post_title">New post</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post_edit_title">Edit post</string>
    <string name="error_empty_content">Text is empty</string>
    <string name="play_video">Play</string>
    <string name="open_external">Open</string>
    <string name="error_no_video_app">Error video</string>
    <string name="error_cannot_open_video">Error open</string>
    <string name="share_post_via">Share via...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>